# mlops-zoomcamp-project

./: Makefile  README.md  docker-compose.yaml  dvc.yaml  mlops-ods.drawio.xml  poetry path.txt  project_design.drawio.xml  pyproject.toml  requirements.txt  setup.py  start.py
.dvc/: config
Docker/minio/.minio.sys/: format.json
Docker/minio/.minio.sys/buckets/: .usage.json
Docker/minio/.minio.sys/buckets/.minio.sys/buckets/.usage-cache.bin/: fs.json
Docker/minio/arts/1/931e11f46b51487b80ae54f20cb94b7f/artifacts/models/: MLmodel  requirements.txt
Docker/minio/arts/1/ca7e199a883f4ab081b2156add792928/artifacts/models/: MLmodel  conda.yaml
Docker/minio/arts/1/d2e25663e58542e987ea459a0c9c2661/artifacts/models/: MLmodel  conda.yaml  python_env.yaml  requirements.txt
Docker/mlflow_image/: Dockerfile
Docker/model_service/: Dockerfile  pyproject.toml
Docker/pgadmin/sessions/: 07f96b84-2f11-4be1-95e8-89efe41a55e6
docs/: Makefile  conf.py  index.rst  make.bat
mlruns/0/: meta.yaml
mlruns/0/2957bcff7ba843a1a944e148fe41bc90/: meta.yaml
mlruns/0/2957bcff7ba843a1a944e148fe41bc90/tags/: mlflow.source.git.commit
mlruns/0/5be32a6286634727ae621a0372365d2e/: meta.yaml
mlruns/0/e9211b3e7e0447a7bd524156365e03c9/: meta.yaml
mlruns/0/e9211b3e7e0447a7bd524156365e03c9/tags/: mlflow.source.git.commit
models/: keras_metadata.pb  saved_model.pb
notebooks/: vegetable_image_classification_using_cnn.ipynb
src/: __init__.py
src/app/: inference.py
src/models/: predict_sample.py  train_model.py
src/visualization/: visualize.py
(+30 files in other folders)
